(#) No data sent to check when using CodeMirror (Issue #1048)

--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -52,6 +52,7 @@ Legend:
    (#) Destination folder not found while updating SobiPro (Issue #1014)
    (#) Missing hidden "showIn" option in category field (Issue #1047)
    (#) Wrong pathway when entry is linked directly in the menu (Issue #1046)
+   (#) No data sent to check when using CodeMirror (Issue #1048)
 
 
 -------------------
