--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -21,7 +21,7 @@
 ; $HeadURL$
 
 
-SP.ENTRY_STATUS_UNAPPROVED="The currently displayed version of this entry is unapproved. You can see this version because you have permission to see unapproved entries."
+SP.ENTRY_STATUS_UNAPPROVED="The currently displayed version of this entry is 'unapproved'. You can see this version because you have permission to see unapproved entries."
 SP.ENTRY_STATUS_UNPUBLISHED="The entry's status of this particular entry is 'unpublished'. You can see this entry because you have permission to see unpublished entries."
 
 SP.INFO_DIFFERENT_LANGUAGE="<strong>Heads up!</strong> You are editing this content (%s) in %s language. Please note, that all changes you make will be stored in this language!"
