--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -32,6 +32,8 @@ Legend:
 
     (#) Missing error text for FILE_WRONG_TYPE added.
 
+    (!) Changed bootstrap datepicker to datetimepicker
+
 -------------------
 1.1.3 (21 October 2013)
 -------------------
