--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -21,6 +21,8 @@
 ; $HeadURL$
 
 
+SP.FMN.ITEMPROP="Item Property"
+
 SP.HEADER_ENTRIES_REJECT="Reject"
 SP.ENTRY_REJECT="Reject Entry"
 SP.ENTRY_REJECT_TPLS="Preload Template"
