--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -22,6 +22,7 @@
 
 
 SP.FMN.ITEMPROP="Item Property"
+SP.TP.SETTINGS="Settings"
 
 SP.HEADER_ENTRIES_REJECT="Reject"
 SP.ENTRY_REJECT="Reject Entry"
