--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -41,6 +41,8 @@ Legend:
     (#) Missing Site name in the browser title if set in Joomla! configuration (Issue #1088)
     (#) Missing argument 3 for SPField_Category (Issue #1079)
     (#) Added legacy layer for multiple predefined data (Issue #1078)
+    (#) Special characters in field label not escaped (Issue #1087)
+    (#) When entry history is disabled, editing entries in backend keeps asking for reason (Issue #1077)
 
     (!) Changed bootstrap datepicker to datetimepicker
 
