--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
@@ -20,6 +20,9 @@
 ; $Author$
 ; $HeadURL$
 
+SP.FIELD_FIXED_CID_MISSING="The category field in this configuration requires at least one category id"
+SP.FIELD_FIXED_CID_INVALID="The given category id '%s' is invalid"
+SP.FIELD_FIXED_CID_INVALID_SECTION="The given category id '%d' is not within this section"
 
 SP.CANNOT_UPLOAD_FILE_NO_DATA="Cannot upload file - no data received."
 SP.FILE_WRONG_TYPE="File type is not allowed."
