(#) Allowing float values in range search (Issue #1074)

--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -44,6 +44,7 @@ Legend:
     (#) Special characters in field label not escaped (Issue #1087)
     (#) When entry history is disabled, editing entries in backend keeps asking for reason (Issue #1077)
     (#) Preventing invalid category id in category field when set to fixed choice (Issue #1075)
+    (#) Allowing float values in range search (Issue #1074)
 
     (!) Changed bootstrap datepicker to datetimepicker
 
