(!) Textarea field with allowed HTML input ignores HTML markup while checking the allowed length

--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -47,8 +47,10 @@ Legend:
     (#) Allowing float values in range search (Issue #1074)
     (#) Reverse title key fixed (Issue #1067)
     (#) Double directory separator in the 'SOBI_MEDIA_LIVE' definition (Issue #1062)
+    (#) Translation method returns NID instead of name (Issue #1060)
 
     (!) Changed bootstrap datepicker to datetimepicker
+    (!) Textarea field with allowed HTML input ignores HTML markup while checking the allowed length
 
 -------------------
 1.1.3 (21 October 2013)
