(!) Changed Joomla! menu handling. Added possibility to load new options dynamically
Legacy mode needed

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.sys.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.sys.ini
@@ -25,6 +25,34 @@
 ; Joomla! Menu (J 2.5+)
 ;=========
 
+SP.SOBI_SELECT_FUNCTIONALITY="Select Functionality"
+SP.MENU_LINK_TO_CATEGORY="Link to a Category"
+SP.FMN.ITEMPROP="Item Property"
+SP.MENU_LINK_TO_SELECTED_CATEGORY="Link to category: '%s'"
+SP.MENU_LINK_TO_ENTRY="Link to an Entry"
+SP.MENU_LINK_TO_SELECTED_ENTRY="Link to entry: '%s'"
+SP.SOBI_SELECT_ENTRY_TYPE="Type something..."
+SP.SOBI_SELECT_ENTRY_TYPE_TITLE="Entry name"
+SP.SOBI_SELECT_ENTRY="Select Entry"
+SP.MENU_LINK_TO_ADD_ENTRY_FORM="Add Entry Form"
+SP.MENU_LINK_TO_ADD_ENTRY_FORM_SELECT_PARENT="Select Parent Category or Section"
+SP.MENU_LINK_TO_ADD_ENTRY_FORM_SELECT_PARENT_EXPL="Select Parent Category or Section in which the link to add entry form should be pointed to"
+SP.MENU_LINK_TO_ADD_ENTRY_FORM_SELECTED="%s: Add Entry Form"
+SP.SOBI_MENU_CLEAR="Clear"
+SP.MENU_LINK_TO_SEARCH_FUNCTION="Search Function"
+SP.MENU_LINK_TO_SEARCH_FUNCTION_SELECTED="Selected functionality: Link to search function. Click on 'Save Selection' button to continue."
+SP.SOBI_DATE_LISTING_YEAR="Select Year"
+SP.SOBI_DATE_LISTING_MONTH="Select Month"
+SP.SOBI_DATE_LISTING_DAY="Select Day"
+SP.SOBI_USER_LISTING_SELECTED="Selected functionality: Link to user's own entries list. Click on 'Save Selection' button to continue."
+SP.MENU_LINK_TO_SECTION="Link to a Section"
+SP.MENU_LINK_TO_SECTION_SELECTED="Selected functionality: Link to section mainpage. Click on 'Save Selection' button to continue."
+SP.SOBI_TPL_OVERRIDE_OPTIONAL="Optional"
+
+
+SP.SOBI_NATIVE_TASKS="SobiPro Functionality"
+SP.SOBI_NATIVE_TASKS_EXPL="Create a menu entry to SobiPro"
+
 SOBIPRO="SobiPro"
 COM_SOBIPRO="SobiPro"
 
