--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -53,6 +53,7 @@ Legend:
 
     (!) Changed bootstrap datepicker to datetimepicker
     (!) Textarea field with allowed HTML input ignores HTML markup while checking the allowed length
+    (!) Changed Joomla! menu handling. Added possibility to load new options dynamically
 
 -------------------
 1.1.3 (21 October 2013)
