(#) Joomla! cache is being frequently deleted

--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -50,6 +50,7 @@ Legend:
     (#) Translation method returns NID instead of name (Issue #1060)
     (#) Disabling storing XML cache when template override is enabled (Issue #1064)
     (#) Unapproved images are being displayed for unauthorised users (Issue #1095)
+    (#) Joomla! cache is being frequently deleted
 
     (!) Changed bootstrap datepicker to datetimepicker
     (!) Textarea field with allowed HTML input ignores HTML markup while checking the allowed length
