--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -21,7 +21,8 @@
 ; $HeadURL$
 
 
-SP.TP.SETTINGS="Settings"
+;SP.TP.SETTINGS="Settings"
+SP.FMN.ITEMPROP="Item Property"
 
 SP.HEADER_ENTRIES_REJECT="Reject"
 SP.ENTRY_REJECT="Reject Entry"
