--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -54,6 +54,7 @@ Legend:
     (#) Disabling Joomla! cache in the search results
     (#) View cache broken
     (#) Entry meta data is not translatable (Issue #1110)
+    (#) Missing labels for different objects when a label is entered in a language which isn't used later
 
     (!) Changed bootstrap datepicker to datetimepicker
     (!) Textarea field with allowed HTML input ignores HTML markup while checking the allowed length
