--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -56,12 +56,12 @@ Legend:
     (#) View cache broken
     (#) Entry meta data is not translatable (Issue #1110)
     (#) Missing labels for different objects when a label is entered in a language which isn't used later
-    (#) Missing header title in administrator area
+    (#) Missing header title in administrator area (Issue 1086)
 
     (!) Changed bootstrap datepicker to datetimepicker
     (!) Textarea field with allowed HTML input ignores HTML markup while checking the allowed length
-    (!) Changed Joomla! menu handling. Added possibility to load new options dynamically
-    (!) Improved the default template (Thanks to Robert Vining)
+    (!) Changed Joomla! menu handling; added possibility to load new options dynamically
+    (!) Improved default template (Thanks to Robert Vining)
 
 -------------------
 1.1.3 (21 October 2013)
