--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -21,6 +21,10 @@
 ; $HeadURL$
 
 
+SP.ENTRY_VERSIONING_ADM_BEHAVIOUR="Behaviour in Admin Area"
+SP.VERSIONING_ADM_NO="Moderate"
+SP.VERSIONING_ADM_YES="Conservative"
+SP.TB.SAVE_WITH_REVISION="Save and Log"
 ;SP.TP.SETTINGS="Settings"
 SP.FMN.ITEMPROP="Item Property"
 
