--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -24,7 +24,9 @@
 SP.ENTRY_VERSIONING_ADM_BEHAVIOUR="Behaviour in Admin Area"
 SP.VERSIONING_ADM_NO="Moderate"
 SP.VERSIONING_ADM_YES="Conservative"
-SP.TB.SAVE_WITH_REVISION="Save and Log"
+SP.CFG.VERSIONING="History/Logging"
+SP.CFG.HTML_ELEMENTS="HTML Elements"
+SP.TB.SAVE_WITH_REVISION="Save & Log"
 ;SP.TP.SETTINGS="Settings"
 SP.FMN.ITEMPROP="Item Property"
 
