lang files for SobiPro 1.1.3

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.sys.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.sys.ini
@@ -35,7 +35,7 @@ SP.SOBI_SELECT_ENTRY_TYPE_TITLE="Entry name"
 SP.SOBI_SELECT_ENTRY="Select Entry"
 SP.MENU_LINK_TO_ADD_ENTRY_FORM="Add Entry Form"
 SP.MENU_LINK_TO_ADD_ENTRY_FORM_SELECT_PARENT="Select Parent Category or Section"
-SP.MENU_LINK_TO_ADD_ENTRY_FORM_SELECT_PARENT_EXPL="Select Parent Category or Section in which the link to add entry form should be pointed to"
+SP.MENU_LINK_TO_ADD_ENTRY_FORM_SELECT_PARENT_EXPL="Select the section, or a parent category which should be pre-selected in the add entry form."
 SP.MENU_LINK_TO_ADD_ENTRY_FORM_SELECTED="%s: Add Entry Form"
 SP.SOBI_MENU_CLEAR="Clear"
 SP.MENU_LINK_TO_SEARCH_FUNCTION="Search Function"
