(#) Added timestamp to several URLs administrator links to leverage browser caching

--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -59,6 +59,7 @@ Legend:
     (#) Missing labels for different objects when a label is entered in a language which isn't used later
     (#) Missing header title in administrator area (Issue 1086)
     (#) Missing template override in the pagination
+    (#) Added timestamp to several URLs administrator links to leverage browser caching
 
     (!) Changed bootstrap datepicker to datetimepicker
     (!) Textarea field with allowed HTML input ignores HTML markup while checking the allowed length
