--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -65,6 +65,7 @@ Legend:
     (!) Textarea field with allowed HTML input ignores HTML markup while checking the allowed length
     (!) Changed Joomla! menu handling; added possibility to load new options dynamically
     (!) Improved default template (Thanks to Robert Vining)
+    (!) Approval of unpublished entries triggers automatic "publish" action (adjustable in config.ini)
 
 -------------------
 1.1.3 (21 October 2013)
