--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -50,7 +50,7 @@ Legend:
     (#) Reverse title key fixed (Issue #1067)
     (#) Double directory separator in the 'SOBI_MEDIA_LIVE' definition (Issue #1062)
     (#) Translation method returns NID instead of name (Issue #1060)
-    (#) Disabling storing XML cache when template override is enabled (Issue #1064)
+    (#) Storing right template in XML cache when template override is enabled (Issue #1064)
     (#) Unapproved images are being displayed for unauthorised users (Issue #1095)
     (#) Joomla! cache is being frequently deleted
     (#) Disabling Joomla! cache in search results
@@ -66,6 +66,7 @@ Legend:
     (!) Changed Joomla! menu handling; added possibility to load new options dynamically
     (!) Improved default template (Thanks to Robert Vining)
     (!) Approval of unpublished entries triggers automatic "publish" action (adjustable in config.ini)
+    (!) Added spinner in administrator area
 
 -------------------
 1.1.3 (21 October 2013)
