--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -27,7 +27,16 @@ Legend:
  (!) - Change
 
 -------------------
-1.1.4 (28 December 2012)
+1.1.5 (28 January 2014)
+-------------------
+
+    (+)
+
+    (#) Changed timestamp getter from integer to double to avoid problems on old 32 bit systems (Issue #1143)
+    (#) Removed short open tag in the administrator/components/com_sobipro/default.php file (Issue #1141)
+
+-------------------
+1.1.4 (28 December 2013)
 -------------------
 
     (+) Added support for schema.org in field model and default templates
