--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -21,6 +21,14 @@
 ; $HeadURL$
 
 
+SP.CRAWLER_CRON_INFO="You can also set a cronjob to periodicaly rebuild the cache using this command:
+
+- &nbsp;&nbsp;&nbsp;   <i><b>%s</i></b> - for this particular section
+- &nbsp;&nbsp;&nbsp;   <i><b>%s</i></b> - for all sections
+
+See: <i><b>%s</i></b> - for more information
+"
+
 SP.ENTRY_VERSIONING_ADM_BEHAVIOUR="Behaviour in Admin Area"
 SP.VERSIONING_ADM_NO="Moderate"
 SP.VERSIONING_ADM_YES="Conservative"
