(!) Background colour of Datepicker and Userselector buttons changed

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -66,7 +66,7 @@ SP.HISTORY_CHANGE_TYPE_CHANGE_STATE="State Change"
 SP.HISTORY_CHANGE_TYPE_APPROVE="Approval"
 SP.HISTORY_CHANGE_AREA_ADM="Administrator Area"
 SP.HISTORY_CHANGE_AREA_SITE="Frontend Area"
-SP.HISTORY_LOAD="Load this Version"
+SP.HISTORY_LOAD="Load Version"
 SP.HISTORY_REVISION_NOT_FOUND="Revision not found."
 SP.HISTORY_REVISION_WARNING="<strong>Heads up!</strong> You are currently editing a version of the entry from %s. If you save the entry now, you'll override the actual version with the currently loaded version!"
 SP.HISTORY_NOTE="Reason for changes"
