--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -45,7 +45,7 @@ Legend:
     (#) Replacing '_' with '-' on update (options)
     (#) Preventing entries id being used as parent id. (Issue #1157 and #1158)
     (#) Minor fixes for Firefox in CSS file of default template
-
+    (#) Wrong language identifier for fields label while editing field definition (Issue #1161)
 
 -------------------
 1.1.4 (28 December 2013)
