--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
@@ -20,6 +20,9 @@
 ; $Author$
 ; $HeadURL$
 
+
+SP.DELETE_CAT_NO_ID="Not categories to delete selected"
+
 SP.FIELD_FIXED_CID_MISSING="The category field in this configuration requires at least one category id"
 SP.FIELD_FIXED_CID_INVALID="The given category id '%s' is invalid"
 SP.FIELD_FIXED_CID_INVALID_SECTION="The given category id '%d' is not within this section"
