(!) Font Awesome updated to version 3.2.1, correction     some icons improved

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
@@ -21,7 +21,7 @@
 ; $HeadURL$
 
 
-SP.DELETE_CAT_NO_ID="No categories to delete selected"
+SP.DELETE_CAT_NO_ID="No categories to delete selected."
 
 SP.FIELD_FIXED_CID_MISSING="The category field in this configuration requires at least one category id"
 SP.FIELD_FIXED_CID_INVALID="The given category id '%s' is invalid"
