(#) Missing 'Percent Formats' in Global Configuration added

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -653,7 +653,7 @@ SP.GB.CFG.XML_ACCELERATOR_NO_REG="For Visitors only"
 SP.GB.CFG.ENGB_PRELOAD="'en-GB' Preload"
 SP.GB.CFG.DATA_ACCELERATOR="SobiPro Data Accelerator"
 SP.GB.CFG.LANG="Language Settings"
-SP.GB.CFG.MULTILANG="Multi-Language Mode"
+SP.GB.CFG.MULTILANG="Multi-Lingual Mode"
 SP.GB.CFG.GENERAL="General"
 SP.GB.CFG.CACHE="Cache"
 SP.GB.CFG.PBY_HEAD="'Powered by' Link"
@@ -676,6 +676,8 @@ SP.GB.CFG.PMN_PRC_FORMAT="Percent Format"
 ; The percent sign HAS to be a html ent: &#37;
 SP.GB.CFG.PMN_PRC_FORMAT_NS="Number Sign (10&#37;)"
 SP.GB.CFG.PMN_PRC_FORMAT_NSS="Number Space Sign (10 &#37;)"
+SP.GB.CFG.PMN_PRC_FORMAT_SN="Sign Number (&#37;10)"
+SP.GB.CFG.PMN_PRC_FORMAT_SSN="Sign Space Number (&#37; 10)"
 SP.GB.CFG.DEB_LEVEL_NONE="None"
 SP.GB.CFG.DEB_LEVEL_ERROR="Only Critical Errors"
 SP.GB.CFG.DEB_LEVEL_WARNING="Errors & Warnings (recommended)"
