--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -50,6 +50,7 @@ Legend:
     (#) Wrong language identifier for field labels while editing field definition (Issue #1161)
     (#) URL field set as required doesn't work correctly (Issue #1160)
     (#) Deleting category without selection deletes current category (Issue #1162)
+    (#) Missing 'Percent Formats' in Global Configuration added
 
 
 -------------------
