--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -824,6 +824,7 @@ SP.EX.REPOSITORY_DELETED="Repository has been deleted."
 SP.EX.PAYMENT_METHOD_TYPE="payment method"
 SP.EX.FIELD_TYPE="field"
 SP.EX.PLUGIN_TYPE="application"
+SP.EX.CORE_PLUGIN="Core Application"
 SP.EX.EXTENSION_HAS_BEEN_INSTALLED="New var:[type] 'var:[name]' has been installed."
 SP.EX.EXTENSION_HAS_BEEN_REMOVED="var:[type] 'var:[name]' has been removed."
 SP.EXTENSIONS.HEADER_PID="Id"
