minor design fixes

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -680,7 +680,7 @@ SP.GB.CFG.PMN_PRC_FORMAT_SN="Sign Number (&#37;10)"
 SP.GB.CFG.PMN_PRC_FORMAT_SSN="Sign Space Number (&#37; 10)"
 SP.GB.CFG.DEB_LEVEL_NONE="None"
 SP.GB.CFG.DEB_LEVEL_ERROR="Only Critical Errors"
-SP.GB.CFG.DEB_LEVEL_WARNING="Errors & Warnings (recommended)"
+SP.GB.CFG.DEB_LEVEL_WARNING="Errors and Warnings (recommended)"
 SP.GB.CFG.DEB_LEVEL_ALL="All Errors, Warnings and Notices"
 
 ;; Filters
