--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -32,11 +32,12 @@ Legend:
 
     (+) "Now" selector in date-time picker
     (+) CLI crawler script to re-create cache from command line and/or cron job
+    (+) Entry Approve button in administration area
 
     (!) Background colour of Datepicker and Userselector buttons changed in backend
     (!) Font Awesome updated to version 3.2.1
     (!) JQuery updated to v1.10.2
-    (!) Allowing link to an unpublished entry in Joomla! menu manager
+    (!) Unpublished entries are shown in Joomla! menu manager (to be able to link to them)
 
     (#) Changed timestamp getter from integer to double to avoid problems on old 32 bit systems (Issue #1143)
     (#) Removed short open tag in the administrator/components/com_sobipro/default.php file (Issue #1141)
