--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -87,6 +87,7 @@ SP.ROBOTS="Robots"
 SP.ROBOTS_NONE="none specified"
 SP.FILTER="Filter..."
 SP.PUBLISHED="Published"
+SP.APPROVED="Approved"
 SP.ENTRY_NO_NAME="No name"
 SP.PN.STARTICON="<i class='icon-fast-backward'></i>"
 SP.PN.PREVIOUSICON="<i class='icon-backward'></i>"
